fix text wrapping issue with cat

--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,10 @@ ul.not-links li {
   margin: 0;
 }
 
+.kaomoji {
+  white-space: nowrap;
+}
+
 @media (max-width: 768px) {
   h1, h2, h3, h4, h5, h6 {
     text-align: center;
